--- a/style.css
+++ b/style.css
@@ -7,11 +7,19 @@
     "wdth" 100;
 }
 /* Shared style */
+.secondary-color{
+    background-color: #FFF8F3;
+}
 .text-primary{
     color: #FD6E0A;
 }
 .dark-2{
     color: #474747;
+}
+.section-title{
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
 }
 .btn-primary{
     background-color: #FD6E0A;
@@ -23,9 +31,11 @@
 }
 /* header */
 .header{
+    /* background-color: #FFF8F3; */
     background-image: url(/images/developer.png), url('/images/header_bg.png');
     background-repeat: no-repeat;
     background-position: top left, bottom right;
+    /* margin: 38px 1403px 15px 24px; */
 }
 
 /* Nav styles */
@@ -74,4 +84,30 @@ nav li a{
 }
 .banner-content{
     max-width: 591PX;
+}
+
+.section-description{
+    font-size: 18px;
+    color: #757575;
+}
+/* main section */
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+/* About section */
+.about{
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+    margin-top: 130px;
+}
+.about-items{
+    display: flex;
+    justify-content: space-around;
+}
+.item-title{
+    font-weight: 600;
+    font-size: 20px;
 }
