--- a/style.css
+++ b/style.css
@@ -133,3 +133,17 @@ main section{
 .section-description{
     text-align: center;
 }
+
+/* resume section style */
+.resume-container{
+    display: flex;
+    gap: 20px;
+}
+.resume-head1{
+    text-align: center;
+    margin-bottom: 40px;
+}
+.resume-button{
+    text-align: center;
+    margin-top: 20px;
+}
