--- a/style.css
+++ b/style.css
@@ -173,3 +173,40 @@ footer input[type="text"], footer input[type="email"], footer textarea{
     width: 100%;
     border: none;
 }
+
+/* Responsive */
+.hide{
+    display: none;
+}
+@media screen and (max-width: 576px) {
+    .skills-container, .resume-container, footer , .about-items, .banner,
+    nav, nav>ul {
+        flex-direction: column;
+        margin: auto;
+    }
+    .skill:hover{
+        box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;}
+    footer, .about{
+        padding: 20px;
+    } 
+    .footer-column{
+        width: 100%;
+    }
+    .header{
+        background-image: none;
+    }
+    nav>ul{
+        gap: 20px;
+        
+    }
+    nav{
+        margin: 0px;
+    }
+    .banner-profile{
+        width: 100%;
+    }
+ 
+    *{
+        box-sizing: border-box;
+    }
+}
